# cpp-mm-scoring

./: .dockerignore  .eslintrc  .gitignore  CMakeLists.txt  Dockerfile  README.md  Validation.md  binding.gyp  demo.js  demo.sh  docker-compose.yml  env.sh  index.js  package-lock.json  package.json  test.sh
docker/: Dockerfile  docker-compose.yml
scripts/: demo.sh  setup.sh  test.sh
src/: MemoryMonitor.cpp  MemoryMonitor.h  Runner.cpp  Runner.h  addon.cpp  main.cpp
test/: mocha.opts  runSubmission.spec.js
test_files/: case1_result.txt  case1_signature.txt  case2_result.txt  case2_signature.txt  case3_result.txt  case3_signature.txt  case4_result.txt  case4_signature.txt  case5_result.txt  case5_signature.txt  case6_signature.txt  case7_result.txt  case7_signature.txt  case8_result.txt  case8_signature.txt  case9_result.txt  case9_signature.txt  cases.json
